integration_tests/codegen_fail/fail/scalar/mutliple_named_fields.rs
use juniper::GraphQLScalar;

#[derive(GraphQLScalar)]
struct Scalar {
    id: i32,
    another: i32,
}

fn main() {}
